# coq2cakeml

./: .gitignore  ManifestGeneratorTrans.v  README.md  _CoqProject  coq2cakeml.opam  dune-project
.github/workflows/: build.yml
scratch/: EvalTestTemplate.v  OldLoader.txt  ProgramEquivalence.v  Transformations.v  tjsoopsie.v
src/: cakeEnv.ml  caseRuleGenerator.ml  certificateGen.ml  constructorRuleGenerator.ml  dune  extraction.ml  g_extraction.mlg  idkrightnow.txt  invGen.ml  nameManip.ml  printDebug.ml  termGen.ml  typeGen.ml
theories/: Constants.v  EnvWrangling.v  EvaluateDecsWrapper.v  ExampleInv.v  Loader.v  MapExample.v  RefineInv.v  Tactics.v  _CoqProject  dune
